fix styles and summary visibility switching

--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -15,6 +15,6 @@ svg {
 
 .container{
     margin:auto;
-    padding:40px;
+    padding:20px 40px;
     max-width:1280px;
 }
