--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -44,7 +44,7 @@
     --main-font-size:14px;
     --main-line-height:1.167;
     --modal-container-margin: 20px 0 0;
-    --summary-container-margin: 80px 0 0;
+    --summary-container-margin: 40px 0 0;
     --create-button-padding:4px 8px;
     --create-button-txt-color:rgb(0, 0, 0);
     --create-button-border-radius:6px;
